# Carmen_En-Colonia

./: CMakeLists.txt  DataBaseHandler.cpp  DataBaseHandler.h  carmen_sandiego.db  main.cpp  resources.rc  script.py
Controller/: GameController.cpp  GameController.h  Globals.cpp  Globals.h
DAO/: BaseDAO.cpp  BaseDAO.h  LocalidadDAO.cpp  LocalidadDAO.h  MisionDAO.cpp  MisionDAO.h  PartidaDAO.cpp  PartidaDAO.h  PistaDAO.cpp  PistaDAO.h  SecuazDAO.cpp  SecuazDAO.h  UsuarioDAO.cpp  UsuarioDAO.h
Models/: Detective.cpp  Detective.h  Localidad.cpp  Localidad.h  Mision.cpp  Mision.h  Partida.cpp  Partida.h  Pista.cpp  Pista.h  Rango.cpp  Rango.h  Secuaz.cpp  Secuaz.h  Usuario.cpp  Usuario.h
build_new/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
ui/: CarouselWindow.cpp  CarouselWindow.h  GameWindow.cpp  GameWindow.h  RegistrationWindow.cpp  RegistrationWindow.h
